================
RSSKit Changelog
================

Jan-13-2007  Guenther Noack
	* INTRO: Added a small note concerning the way how to obtain the
          Grr development version as a programming example for RSSKit.

Dec-6-2006  Guenther Noack
	* ATOM 0.3, 1.0: Accept text/plain and text/html as types, too

Nov-27-2006  Guenther Noack
	* DOMParser: CDATA support added
	* RSSArticleCreationListener: more date formats added
	* ChangeLog file: Cleaned up a bit (added my name to old
	  entries where I was the only contributor)
	* GNUmakefile: Made the etoile.make include 'weak' (presence
	  of it is no longer required in order to compile)

Nov-26-2006  Guenther Noack
	* RSSArticle: -description method now returns the headline. Please
	  use the -content method to retrieve the article content now. This
	  breaks compatibility with old Grr versions but makes more sense.
	* RSSFeed delegate: Removed (not used by Mollusk nor Grr)
	* RSSFeed: performance improvements when autoclear is off
	* RSSFeed protocol: Added autoclear accessor methods

Nov-12-2006  Yen-Ju Chen
	* Process namespace for XMLParser.
          It is essential for atom 1.0.
	* Avoid add nil RSSLink into array.

Nov-11-2006  Guenther Noack
	* Fixed namespace bug (namespaces were accidentally ignored before)
	* Improved date parsing

Nov-11-2006  Yen-Ju Chen
        * Try to fix random failed fetching issue by more safe guard.

Nov-10-2006  Yen-Ju Chen
	* Try to improve memory usage by properly retain and release.

Nov-09-2006  Guenther Noack
	* Removed some deprecated methods from RSSFeed class
	* Added -articleSet and -articleCount method to RSSFeed
	  protocol and class
	* Added support for some more itunes-Namespace (=Podcast)
	  features. (Why doesn't the namespace work any more?)

Nov-08-2006  Guenther Noack
	* Fixed enclosure-link bug

Nov-06-2006  Yen-Ju Chen
	* Compile on Cocoa.
	* Post notification if fatching failed.

Nov-05-2006  Guenther Noack
	* Removed some deprecated methods